cluster/apps/doleo/doleo-backend/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doleo-backend-staging
  namespace: doleo
  labels:
    app: doleo-backend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doleo-backend-staging
  template:
    metadata:
      labels:
        app: doleo-backend-staging
    spec:
      containers:
        - name: doleo-backend-staging
          image: spuxx/doleo-2-backend:main-20240114-184106-5e32a8ca2358f9e4a64d0e1414f9bb20fdd8d7fb # {"$imagepolicy": "doleo:doleo-backend-staging"}
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
