cluster/apps/doleo/doleo-backend/staging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: doleo-backend-staging
  namespace: doleo
spec:
  selector:
    app: doleo-backend-staging
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
